--- a/templates/base.html
+++ b/templates/base.html
@@ -91,6 +91,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/simulator">Simulator</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/universe">Universe Selection</a>
+                    </li>
                 </ul>
             </div>
         </div>
